--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext {
         kotlin_version = "1.3.72"
         fragment_version = "1.2.5"
+        coroutines = "1.3.7"
         lifecycle = "2.2.0"
         hilt_google = "2.28-alpha"
         hilt_jetpack = "1.0.0-alpha01"
